# wud

./: LICENSE  README.md  pyproject.toml
src/wud/: cli.py  parse_mod.py  sidebar.tcss  tui.py
